{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 358,
  "lineage": "3a72f8ee-5605-e601-c293-3ebfec393eff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-003ed299ad852cb1f",
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:instance/i-0e73dd7ccbee8e4eb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e73dd7ccbee8e4eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04c5b2ebb8957a263"
              }
            ],
            "primary_network_interface_id": "eni-04c5b2ebb8957a263",
            "private_dns": "ip-192-168-100-23.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.100.23",
            "public_dns": "ec2-54-248-140-193.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.140.193",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ae4db52b22b9694f",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-056173ee5a64c9bed"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01c53237f17f889e8",
            "tags": {
              "Name": "nat-instance-a"
            },
            "tags_all": {
              "Name": "nat-instance-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056173ee5a64c9bed"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "i-0e73dd7ccbee8e4eb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-003ed299ad852cb1f",
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:instance/i-0db0f3734ad73eb4a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db0f3734ad73eb4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-056810c6d6214152e"
              }
            ],
            "primary_network_interface_id": "eni-056810c6d6214152e",
            "private_dns": "ip-192-168-200-123.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.200.123",
            "public_dns": "ec2-43-207-91-195.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.207.91.195",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-08dd278f56c9dcefe",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-056173ee5a64c9bed"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0baee04b33bf4c0ef",
            "tags": {
              "Name": "nat-instance-c"
            },
            "tags_all": {
              "Name": "nat-instance-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056173ee5a64c9bed"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "i-0db0f3734ad73eb4a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01205c30badb279ec",
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:instance/i-09c680e91103fcfde",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "main",
            "id": "i-09c680e91103fcfde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-082d61ceaab8af3b7"
              }
            ],
            "primary_network_interface_id": "eni-082d61ceaab8af3b7",
            "private_dns": "ip-192-168-0-90.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.90",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09a78adf41ae91eb8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06d12982db8c178ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c608b33a1e98319",
            "tags": {
              "Name": "web-a-2"
            },
            "tags_all": {
              "Name": "web-a-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d12982db8c178ef"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "i-09c680e91103fcfde",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_a",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_security_group.security_groups_web",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01205c30badb279ec",
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:instance/i-08f019296070b803f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "main",
            "id": "i-08f019296070b803f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f3cd74c855e38902"
              }
            ],
            "primary_network_interface_id": "eni-0f3cd74c855e38902",
            "private_dns": "ip-192-168-0-162.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.162",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e193f3672cd28510",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06d12982db8c178ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a090a36f3112d74e",
            "tags": {
              "Name": "web-c-2"
            },
            "tags_all": {
              "Name": "web-c-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d12982db8c178ef"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "i-08f019296070b803f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_a",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_security_group.security_groups_web",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:internet-gateway/igw-0c7fadf084c48d19a",
            "id": "igw-0c7fadf084c48d19a",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:loadbalancer/app/main/ff59a16f35ad1010",
            "arn_suffix": "app/main/ff59a16f35ad1010",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-227722966.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:loadbalancer/app/main/ff59a16f35ad1010",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0a91ea2c497547077"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c53237f17f889e8"
              },
              {
                "subnet_id": "subnet-0baee04b33bf4c0ef"
              }
            ],
            "subnets": [
              "subnet-01c53237f17f889e8",
              "subnet-0baee04b33bf4c0ef"
            ],
            "vpc_id": "vpc-05ec1b8e720b36fec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:loadbalancer/app/main/ff59a16f35ad1010"
          },
          "dependencies": [
            "aws_security_group.security_groups_lb",
            "aws_subnet.subnet_public_a",
            "aws_subnet.subnet_public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:listener/app/main/ff59a16f35ad1010/62789eefdbcf5de2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:listener/app/main/ff59a16f35ad1010/62789eefdbcf5de2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:loadbalancer/app/main/ff59a16f35ad1010",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:listener/app/main/ff59a16f35ad1010/62789eefdbcf5de2"
          },
          "dependencies": [
            "aws_lb.main_lb",
            "aws_lb_target_group.main_tg",
            "aws_security_group.security_groups_lb",
            "aws_subnet.subnet_public_a",
            "aws_subnet.subnet_public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3",
            "arn_suffix": "targetgroup/main/effeabdd865088d3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:loadbalancer/app/main/ff59a16f35ad1010"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "main",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_a_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3-20251030160036469500000005",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3",
            "target_id": "i-09c680e91103fcfde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_a",
            "aws_instance.web_a",
            "aws_lb_target_group.main_tg",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_security_group.security_groups_web",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_c_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3-20251030160036546000000006",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:307202557929:targetgroup/main/effeabdd865088d3",
            "target_id": "i-08f019296070b803f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_a",
            "aws_instance.web_c",
            "aws_lb_target_group.main_tg",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_security_group.security_groups_web",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main_route_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7fadf084c48d19a",
            "id": "r-rtb-0324c8e8a1db66d691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0324c8e8a1db66d69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0324c8e8a1db66d69"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_rtb_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1a_route_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d2bd910148681d11080289494",
            "instance_id": "i-0e73dd7ccbee8e4eb",
            "instance_owner_id": "307202557929",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-04c5b2ebb8957a263",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04d2bd910148681d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04d2bd910148681d1"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_a",
            "aws_route_table.main_rtb_private_1a",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1c_route_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04627d48ea12c19b91080289494",
            "instance_id": "i-0db0f3734ad73eb4a",
            "instance_owner_id": "307202557929",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-056810c6d6214152e",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04627d48ea12c19b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04627d48ea12c19b9"
          },
          "dependencies": [
            "aws_db_instance.main_db",
            "aws_db_subnet_group.main",
            "aws_instance.nat_c",
            "aws_route_table.main_rtb_private_1c",
            "aws_security_group.rds_sg",
            "aws_security_group.security_groups_nat",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_c",
            "aws_subnet.subnet_public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rtb_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:route-table/rtb-04d2bd910148681d1",
            "id": "rtb-04d2bd910148681d1",
            "owner_id": "307202557929",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0863ced4a6bddf5d6",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-private-1a"
            },
            "tags_all": {
              "Name": "main-rtb-private-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "rtb-04d2bd910148681d1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rtb_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:route-table/rtb-04627d48ea12c19b9",
            "id": "rtb-04627d48ea12c19b9",
            "owner_id": "307202557929",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0052d7c209bf9c03e",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-private-1c"
            },
            "tags_all": {
              "Name": "main-rtb-private-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "rtb-04627d48ea12c19b9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:route-table/rtb-0324c8e8a1db66d69",
            "id": "rtb-0324c8e8a1db66d69",
            "owner_id": "307202557929",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7fadf084c48d19a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-public"
            },
            "tags_all": {
              "Name": "main-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "rtb-0324c8e8a1db66d69",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_associate_rtb_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d838f605152af08",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04d2bd910148681d1",
            "subnet_id": "subnet-02c608b33a1e98319"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main_rtb_private_1a",
            "aws_subnet.subnet_private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_associate_rtb_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c73cf5548c7f9d1",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04627d48ea12c19b9",
            "subnet_id": "subnet-0a090a36f3112d74e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main_rtb_private_1c",
            "aws_subnet.subnet_private_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_associate_rtb_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7eb260a7a5e9f33",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0324c8e8a1db66d69",
            "subnet_id": "subnet-01c53237f17f889e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main_rtb_public",
            "aws_subnet.subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_associate_rtb_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2875c5b21f1343",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0324c8e8a1db66d69",
            "subnet_id": "subnet-0baee04b33bf4c0ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main_rtb_public",
            "aws_subnet.subnet_public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:security-group/sg-095a358627eb4102f",
            "description": "Allow MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095a358627eb4102f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "sg-095a358627eb4102f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:security-group/sg-0a91ea2c497547077",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a91ea2c497547077",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-groups-lb",
            "name_prefix": "",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "sg-0a91ea2c497547077",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:security-group/sg-056173ee5a64c9bed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056173ee5a64c9bed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security-groups-nat",
            "name_prefix": "",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "sg-056173ee5a64c9bed",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:security-group/sg-06d12982db8c178ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d12982db8c178ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-groups-web",
            "name_prefix": "",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "sg-06d12982db8c178ef",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:subnet/subnet-02c608b33a1e98319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c608b33a1e98319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307202557929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "subnet-private-a"
            },
            "tags_all": {
              "Name": "subnet-private-a"
            },
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "subnet-02c608b33a1e98319",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:subnet/subnet-0a090a36f3112d74e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a090a36f3112d74e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307202557929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "subnet-private-c"
            },
            "tags_all": {
              "Name": "subnet-private-c"
            },
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "subnet-0a090a36f3112d74e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:subnet/subnet-01c53237f17f889e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c53237f17f889e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307202557929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "subnet-public-a"
            },
            "tags_all": {
              "Name": "subnet-public-a"
            },
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "subnet-01c53237f17f889e8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:subnet/subnet-0baee04b33bf4c0ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baee04b33bf4c0ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307202557929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "subnet-public-c"
            },
            "tags_all": {
              "Name": "subnet-public-c"
            },
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "subnet-0baee04b33bf4c0ef",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:vpc/vpc-05ec1b8e720b36fec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0fd5f34423c50d749",
            "default_route_table_id": "rtb-024725fdfad2f10be",
            "default_security_group_id": "sg-04a9982f4e257004b",
            "dhcp_options_id": "dopt-0570585a1951478d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ec1b8e720b36fec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024725fdfad2f10be",
            "owner_id": "307202557929",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "vpc-05ec1b8e720b36fec",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "main_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:307202557929:vpc-endpoint/vpce-0a7c66b369de41af5",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-0a7c66b369de41af5",
            "owner_id": "307202557929",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04627d48ea12c19b9",
              "rtb-04d2bd910148681d1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "main-s3"
            },
            "tags_all": {
              "Name": "main-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05ec1b8e720b36fec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "307202557929",
            "id": "vpce-0a7c66b369de41af5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}